Fixing column spacing on tables

--- a/server/public/display_teams.css
+++ b/server/public/display_teams.css
@@ -1,3 +1,4 @@
 table th {
     width: auto !important;
+    height: 1000px;
 }
